@@ -3,6 +3,7 @@ Version: 0.18.313
 Date: 2020-08-05
      - Make lab surface infinite.
      - Add option to remove fog of war while in the lab. This lowers performance, but allows making and placing very large blueprints from map view.
+     - Prevent crash when player's character dies outside of lab by making character invincible.
 ---------------------------------------------------------------------------------------------------
 Version: 0.18.312
 Date: 2020-08-01 again
